--- a/PetSupplies/src/main/webapp/index.html
+++ b/PetSupplies/src/main/webapp/index.html
@@ -4,8 +4,31 @@
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="assets/css/main.css">
+        <script src="assets/js/FunHomePage.js"></script>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <div id="page">
+            <div id="phrase_box">
+                <svg width="100%" height="100%">
+                    <defs>
+                        <mask id="mask" maskUnits="userSpaceOnUse" maskContentUnits="userSpaceOnUse">
+                            <linearGradient id="linearGradient" gradientUnits="objectBoundingBox" x2="0" y2="1">
+                                <stop stop-color="white" stop-opacity="0" offset="0%"/>
+                                <stop stop-color="white" stop-opacity="1" offset="30%"/>
+                                <stop stop-color="white" stop-opacity="1" offset="70%"/>
+                                <stop stop-color="white" stop-opacity="0" offset="100%"/>
+                            </linearGradient>
+                            <rect width="100%" height="100%" fill="url(#linearGradient)"/>
+                        </mask>
+                    </defs>
+                    <g width="100%" height="100%" style="mask: url(#mask);">
+                        <g id="phrases"></g>
+                    </g>
+                </svg>
+            </div>
+            <div id="footer">
+                <div id="logo"></div>PetSupplies
+            </div>
+        </div>
     </body>
 </html>
