--- a/PetSupplies/src/main/webapp/index.html
+++ b/PetSupplies/src/main/webapp/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="page">
             <div id="phrase_box">
+                <div><img src="https://www.sogeti.nl/sites/all/themes/sogeti/logo-screen.png" class="sLogo" /></div>
                 <svg width="100%" height="100%">
                     <defs>
                         <mask id="mask" maskUnits="userSpaceOnUse" maskContentUnits="userSpaceOnUse">
