--- a/PetSupplies/src/main/webapp/directives/cart/icon.html
+++ b/PetSupplies/src/main/webapp/directives/cart/icon.html
@@ -1,3 +1,3 @@
-<a href="#" class="cartIcon" ng-controller="cartController">
+<a href="#cart" class="cartIcon" ng-controller="cartController">
     <span class="amountItems" ng-hide="items.length == 0">{{items.length}}</span>
 </a>
