--- a/PetSupplies/src/main/webapp/directives/cart/icon.html
+++ b/PetSupplies/src/main/webapp/directives/cart/icon.html
@@ -1,3 +1,3 @@
-<a href="#cart" class="cartIcon" ng-controller="cartController">
-    <span class="amountItems" ng-hide="items.length == 0">{{items.length}}</span>
+<a href="#cart" class="cartIcon" ng-controller="CartController as cCtrl">
+    <span class="amountItems" ng-hide="cCtrl.items.length == 0">{{cCtrl.items.length}}</span>
 </a>
