Just trying some new stuff.

--- a/PetSupplies/src/main/webapp/index.html
+++ b/PetSupplies/src/main/webapp/index.html
@@ -8,10 +8,21 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- AngularJS -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+        <script src="node_modules/angular/angular.min.js"></script>
+        <script src="node_modules/angular-route/angular-route.js"></script>
         <script src="assets/js/app.js"></script>
-        <script src="assets/js/routeProvider.js"></script>
+        <!-- Controllers -->
+        <script src="assets/js/controllers/Main.controller.js"></script>
+        <script src="assets/js/controllers/Cart.controller.js"></script>
+        <script src="assets/js/controllers/Menu.controller.js"></script>
+        <!-- # Controllers -->
+
+        <!-- Directives -->
+        <script src="assets/js/directives/cartIcon.directive.js"></script>
+        <script src="assets/js/directives/headerGarantees.directive.js"></script>
+        <script src="assets/js/directives/headerSlider.directive.js"></script>
+        <script src="assets/js/directives/productBox.directive.js"></script>
+        <!-- # Directives -->
         <!-- # AngularJS -->
 
         <!-- CSS -->
