this time including the angularjs stuff...

--- a/AngularJSFrontend/app/view1/view1.html
+++ b/AngularJSFrontend/app/view1/view1.html
@@ -20,6 +20,8 @@
     </tr>
 </table>
 
+
+<!--is shown on click-->
 <ul ng-if="selectedProduct != null">
     <li>Name: {{selectedProduct.name}}</li>
     <li ng-if="selectedProduct!==null">Description: {{selectedProduct.description}}</li>
