--- a/AngularJSFrontend/app/index.html
+++ b/AngularJSFrontend/app/index.html
@@ -25,6 +25,9 @@
   <![endif]-->
 
   <div ng-view></div>
+  
+  <p>Deze website is nog in ontwikkeling.
+  Producten kunt u bestellen via: bestel@petsupplies.nl</p>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
