Added some awesome directive possibilitys for presentation

--- a/PetSupplies/src/main/webapp/directives/header/slider.html
+++ b/PetSupplies/src/main/webapp/directives/header/slider.html
@@ -1,5 +1,5 @@
 <div class="slider">
     <div class="container">
-        <span class="text">{{title}}</span>
+        <span class="text">{{sliderTitle}}</span>
     </div>
 </div>
