--- a/PetSupplies/src/main/webapp/directives/products/product_box.html
+++ b/PetSupplies/src/main/webapp/directives/products/product_box.html
@@ -1,4 +1,4 @@
 <a href="#" class="prod">
     <!-- TODO: Implement image -->
-    <div class="title">Acana Wild Prairie Hondenvoer</div>
+    <div class="title">{{productTitle}}</div>
 </a>
