Removed temp_name and added better example.

--- a/PetSupplies/src/main/webapp/pages/home.html
+++ b/PetSupplies/src/main/webapp/pages/home.html
@@ -2,5 +2,5 @@
 <p class="slogan">Bestel snel, gemakkelijk en laat het thuis bezorgen.</p>
 <div class="productContainer clearFix">
     <!-- TODO: Implement item repeater -->
-    <div product-box-directive product-title="Acana Wild Prairie Hondenvoer" ng-repeat="i in [1,2,3,4]"></div>
+    <div product-box-directive product-title="Product {{i}}" ng-repeat="i in [1,2,3,4]"></div>
 </div>
