--- a/AngularJSFrontend/app/index.html
+++ b/AngularJSFrontend/app/index.html
@@ -3,11 +3,11 @@
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
-    <head>
+    <head ng-controller="MainController as mCtrl">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Petsupplies</title>
-        <meta name="description" content="">
+        <title>{{mCtrl.pageTitle}}</title>
+        <meta name="description" content="{{mCtrl.pageDescription}}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
         <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
@@ -21,23 +21,15 @@
                     <a href="#home" class="logo"><img src="assets/images/header/logo.png" alt="Image not found"/></a>
                     <div class="cartInfo" cart-icon-directive></div>
                     <ul class="menu" ng-controller="MenuController as menuCntrl">
-                        <li ng-class="{ active: menuCntrl.location.path() == '/home' }"><a href="#home">Home</a></li>
-<!--                        <li><a href="#!/view1">view1</a></li>
-                        <li><a href="#!/view2">view2</a></li>-->
-                        <li ng-class="{ active: menuCntrl.location.path() == '/assortiment' }"><a href="#assortiment">Assortiment</a></li>
-                        <li ng-class="{ active: menuCntrl.location.path() == '/contact' }"><a href="#contact">Contact</a></li>
+                        <li ng-class="{ active: menuCntrl.location.path() == '/home' }"><a href="#!/home">Home</a></li>
+                        <li ng-class="{ active: menuCntrl.location.path() == '/assortiment' }"><a href="#!/assortiment">Assortiment</a></li>
+                        <li ng-class="{ active: menuCntrl.location.path() == '/contact' }"><a href="#!/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
             <div header-slider-directive></div>
             <div header-garantees-directive></div>
             <div class="container content">
-                <!--  <ul class="menu">
-                    <li><a href="#!/view1">view1</a></li>
-                    <li><a href="#!/view2">view2</a></li>
-                  </ul>-->
-
-
                 <div ng-view></div>
             </div>
         </div>
@@ -64,8 +56,11 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js" type="text/javascript"></script>
         <script src="app.js"></script>
-        <script src="view1/view1.js"></script>
+        <script src="assortiment/assortiment.js"></script>
         <script src="view2/view2.js"></script>
+        <script src="pages/contact.js"></script>
+        <script src="pages/cart.js"></script>
+        <script src="pages/home.js"></script>
         <script src="components/version/version.js"></script>
         <script src="components/version/version-directive.js"></script>
         <script src="components/version/interpolate-filter.js"></script>
