--- a/AngularJSFrontend/app/index.html
+++ b/AngularJSFrontend/app/index.html
@@ -61,6 +61,7 @@
         <script src="pages/contact.js"></script>
         <script src="pages/cart.js"></script>
         <script src="pages/home.js"></script>
+        <script src="pages/product.js"></script>
         <script src="components/version/version.js"></script>
         <script src="components/version/version-directive.js"></script>
         <script src="components/version/interpolate-filter.js"></script>
