--- a/AngularJSFrontend/app/pages/home.html
+++ b/AngularJSFrontend/app/pages/home.html
@@ -1,7 +1,7 @@
 <h1>Alleen het beste is goed genoeg!</h1>
 <p class="slogan">Bestel snel, gemakkelijk en laat het thuis bezorgen.</p>
 <div class="productContainer clearFix">
-    <a href="#" class="prod" ng-repeat="product in allProducts" ng-click="gotoProduct(product)">
+    <a href="#!/product/{{product.id}}" class="prod" ng-repeat="product in allProducts">
         <div class="title">{{product.name}}</div>
     </a>
 </div>
